# NX-SDK

./: CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake  nxandroid.cmake  nxapp.cmake  nxarchive.cmake  nxcompiler.cmake  nxcrosscompile.cmake  nxresources.cmake  toolchain-android.cmake
other/: flexgl_gl_4_4.config
src/: CMakeLists.txt
src/cmake/: nxconfig.cmake.in  nxconfig.h.cmake
src/idl/: nx3dmodel.idl  nxgpuprogramsource.idl
src/nx/: nx3d.cpp  nx3d.h  nxcore.h
src/nx/allocator/: nxalloctracker.cpp  nxalloctracker.h  nxmemory.cpp  nxmemory.h
src/nx/config/: nxcpp.h  nxsetup.h
src/nx/event/: nxeventdata.h  nxeventlistener.h  nxeventmanager.cpp  nxeventmanager.h
src/nx/font/: nxfont.cpp  nxfont.h
src/nx/gpu/: nxgpu.h  nxgpubuffer.cpp  nxgpubuffer.h  nxgpubuffermanagerinterface.h  nxgpubuffermanagersimple.cpp  nxgpubuffermanagersimple.h  nxgpuinterface.h  nxgpumesh.cpp  nxgpumesh.h  nxgpuprogramsource.cpp  nxgpuprogramsource.h  nxgpurendertarget.cpp  nxgpurendertarget.h  nxgpuresource.h  nxgpuresourcemanager.cpp  nxgpuresourcemanager.h  nxgpushaderinput.cpp  nxgpushaderinput.h  nxgpusubmesh.cpp  nxgpusubmesh.h  nxgputexture.cpp  nxgputexture.h
src/nx/hdl/: nxhdl.h  nxhdlmanager.cpp  nxhdlmanager.h
src/nx/io/: nxarchivefs.cpp  nxarchivefs.h  nxfilemanager.cpp  nxfilemanager.h  nxio.h  nxiobase.h  nxiofile.cpp  nxiofile.h  nxiomemory.cpp  nxiomemory.h  nxiomemorymappedfile.cpp  nxiomemorymappedfile.h  nxsandboxfs.cpp  nxsandboxfs.h  nxvirtualfs.h
src/nx/log/: nxlog.cpp  nxlog.h
src/nx/math/: nx3dmath.h  nxboundingvolumes.cpp  nxboundingvolumes.h  nxintersect.cpp  nxintersect.h  nxplane.cpp  nxplane.h  nxray.h  nxtransform.cpp  nxtransform.h
src/nx/media/: nx3dmodel.cpp  nx3dmodel.h  nximage.cpp  nximage.h  nxmediaitem.h  nxmediamanager.cpp  nxmediamanager.h
src/nx/ogl/: nxgpuinterfaceogl.cpp  nxgpuinterfaceogl.h  nxogl.cpp  nxogl.h  nxoglbuffer.cpp  nxoglbuffer.h  nxoglinternal.h  nxoglobj.h  nxoglprogram.cpp  nxoglprogram.h  nxoglrendertarget.cpp  nxoglrendertarget.h  nxoglshaderinput.cpp  nxoglshaderinput.h  nxogltexture.cpp  nxogltexture.h
src/nx/ogl/core44/: flextGL.c  flextGL.h
src/nx/ogl/core45/: nxflexgl.cpp  nxflexgl.h
src/nx/ogl/core45/glfw3/: flextGL.c  flextGL.h
src/nx/ogl/core45/normal/: flextGL.c  flextGL.h
src/nx/os/: nxargs.cpp  nxargs.h  nxatomic.h  nxlock.cpp  nxlock.h  nxpath.cpp  nxpath.h  nxsharedobj.cpp  nxsharedobj.h  nxthread.cpp  nxthread.h
src/nx/os/posix/: nxlockposix.cpp  nxlockposix.h  nxthreadposix.cpp  nxthreadposix.h
src/nx/os/sdl2/: nxlocksdl.cpp  nxlocksdl.h  nxthreadsdl.cpp  nxthreadsdl.h
src/nx/resource/: nx3dmodelresource.cpp  nx3dmodelresource.h  nxgpumeshresource.cpp  nxgpumeshresource.h  nxgpuprogramresource.cpp  nxgpuprogramresource.h  nxgputextureresource.cpp  nxgputextureresource.h  nximageresource.cpp  nximageresource.h  nxresource.cpp  nxresource.h  nxresourcemanager.cpp  nxresourcemanager.h
src/nx/scene/: nxcomponents.h  nxentitybase.h  nxscenebase.cpp  nxscenebase.h
src/nx/sys/: nxapp.cpp  nxapp.h  nxinput.cpp  nxinput.h  nxinputctx.h  nxinputmanager.cpp  nxinputmanager.h  nxsysevents.cpp  nxsysevents.h  nxsystem.cpp  nxsystem.h  nxwindow.cpp  nxwindow.h
src/nx/sys/android/: android_native_app_glue.c  nxandroidinput.cpp  nxandroidinput.h  nxsystemandroid.cpp  nxsystemandroid.h  nxwindowandroid.cpp  nxwindowandroid.h
src/nx/sys/gl/core44/: flextGL.c  flextGL.h
src/nx/sys/glfw/: nxglfwinput.cpp  nxglfwinput.h  nxsystemglfw.cpp  nxsystemglfw.h  nxwindowglfw.cpp  nxwindowglfw.h
src/nx/sys/sdl/: nxsdlinput.cpp  nxsdlinput.h  nxsystemsdl.cpp  nxsystemsdl.h  nxwindowsdl.cpp  nxwindowsdl.h
src/nx/task/: nxtask.cpp  nxtask.h  nxtaskexecutor.cpp  nxtaskexecutor.h  nxtaskmanager.cpp  nxtaskmanager.h
src/nx/util/: nxbitarray.h  nxbitutil.cpp  nxbitutil.h  nxhashes.cpp  nxhashes.h  nxmpmcqueue.h  nxpool.h  nxsignal.h  nxspscqueue.h  nxstrutil.cpp  nxstrutil.h  nxtime.cpp  nxtime.h  nxtlsharedptr.h
tests/args/: CMakeLists.txt  nxargstest.cpp
tests/glinfo/: CMakeLists.txt  nxglinfo.cpp
tests/input/: CMakeLists.txt  nxtestinput.cpp
tests/io/: CMakeLists.txt  nxarchivetest.cpp  nxiotest.cpp
tests/tlsharedptr/: CMakeLists.txt  nxtesttlsharedptr.cpp
tools/: CMakeLists.txt
tools/nx3dconverter/: CMakeLists.txt
tools/nx3dconverter/src/: main.cpp  nx3dconverter.h  nx3dmodelbuilder.cpp  nx3dmodelbuilder.h  nx3dmodelpostprocess.cpp  nx3dmodelpostprocess.h  nxassimpconverter.cpp  nxassimpconverter.h
tools/nx3dinfo/: CMakeLists.txt
tools/nx3dinfo/src/: main.cpp
tools/nxastctonximg/: CMakeLists.txt
tools/nxastctonximg/src/: main.cpp
tools/nxbuildimg/: CMakeLists.txt  nxbuildimg.py
tools/nxfontconverter/: CMakeLists.txt
tools/nxfontconverter/src/: main.cpp  stb_image_write.h
tools/nximgconverter/: CMakeLists.txt
tools/nximgconverter/src/: main.cpp
tools/nximginfo/: CMakeLists.txt
tools/nximginfo/src/: nximginfo.cpp
tools/nximgviewer/: CMakeLists.txt
tools/nximgviewer/src/: main.cpp
tools/nxktxtonximg/: CMakeLists.txt
tools/nxktxtonximg/src/: ktxtonximg.cpp
tools/nxprogrambuilder/: CMakeLists.txt
tools/nxprogrambuilder/src/: main.cpp
