#------------------------------------------------------------------------------
# NXBuildImg - Convert and create nximg files
#------------------------------------------------------------------------------

# Dummy target so that the sources show up in the project
add_custom_target(nxbuildimg SOURCES nxbuildimg.py)

#install(TARGETS ${PROJ_NAME} DESTINATION bin)
